--- a/tb_kathleen.html
+++ b/tb_kathleen.html
@@ -7,13 +7,17 @@
     Review Assignment
     
     Photo Page of Kathleen Ferris
-    Author: 
-    Date:   
+    Author: Ken
+    Date: 02/04/2025
 
     Filename: tb_kathleen.html
    -->
    <meta charset="utf-8" />
    <title>Tree and Book: Kathleen Ferris</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="tb_base.css">
+   <link rel="stylesheet" href="tb_styles4.css">
+   <link rel="stylesheet" href="tb_visual4.css">
 </head>
 
 <body>
