--- a/tb_ferris.html
+++ b/tb_ferris.html
@@ -7,14 +7,19 @@
     Review Assignment
     
     Home Page of the Ferris Family Page at Tree and Book
-    Author: 
-    Date:   
+    Author: Ken
+    Date: 02/04/2025
 
     Filename: tb_ferris.html
    -->
    
    <meta charset="utf-8" />
    <title>Tree and Book: The Ferris Family</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>TB Ferris</title>
+   <link rel="stylesheet" href="tb_base.css">
+   <link rel="stylesheet" href="tb_styles3.css">
+   <link rel="stylesheet" href="tb_visual3.css">
 </head>
 
 <body>
@@ -34,6 +39,14 @@
    <main>
       <header>
          <h1>The Ferris Family</h1>
+                <figure>
+                    <img src="tb_ferris.png" alt="Ferris Family" usemap="#portrait_map">
+                    <figcaption>Kathleen Ferris and daughter Linda (1961)</figcaption>
+                </figure>
+                <map name="portrait_map">
+                  <area shape="rect" coords="10,50,192,223" href="tb_kathleen.html" alt="Kathleen Ferris">
+                  <area shape="circle" coords="264,108,80" href="tb_linda.html" alt="Linda Ferris-White">
+              </map>
       </header>
       
       <article>
